# FRBench

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASING.md  demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  rolling-release.yml
frbench/: __init__.py  _config.py  _exceptions.py  cli.py  detector.py  fr.py  types.py
frbench/backbones/: __init__.py  convnext.py  densenet.py  efficientnet.py  ir.py  irse.py  mobilefacenet.py  mobilenet.py  mobilevit_commons.py  mobilevit_v1.py  mobilevit_v2.py  mobilevit_v3.py  resnet.py  resnetv2.py  swin_commons.py  swin_mlp.py  swin_v1.py  swin_v2.py  utils.py
frbench/utils/: __init__.py  download.py  geometry.py  log.py  postprocess.py  preprocess.py  retinaface.py  update_check.py
tests/: conftest.py  test_config.py  test_geometry.py  test_input_contract.py  test_types.py
